--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Multiplication Table</title>
-    <!-- note that here we’re linking to a CDN version of Angular  -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+    <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <table ng-controller="MultiplicationCtrl as vm">
-        <tr ng-repeat="numberA in vm.numbers">
-            <td ng-repeat="numberB in vm.numbers">
-                {{ numberA * numberB }}
-            </td>
-        </tr>
-    </table>
-    <script src="myApp.js" type="text/javascript"></script>
+    <div ng-controller="MultiplicationCtrl as vm" initial-number-limit="10">
+        <input type="number" ng-model="vm.numberLimit" placeholder="Enter a number" />
+        <table>
+            <tr ng-repeat="numberA in vm.numbers()">
+                <td ng-repeat="numberB in vm.numbers()">
+                    {{ vm.compute(numberA, numberB)  }}
+                </td>
+            </tr>
+        </table>
+    </div>
+    <script src="myApp.js"></script>
 </body>
 </html>
